--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.create {
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px 10px;
+    border: 3px solid silver;
+    border-radius: 8px;
+    margin-top: 15px;
+}
+.create label{
+    text-align: center;
+    display: block;
+}
+.create input{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 60%;
+}
+.create h2 {
+    font-size: 20px;
+    color: rgb(100, 19, 19);
+    margin-bottom: 30px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.create select {
+    width: 100%;
+    padding: 6px 10px;
+    margin: 10 px 0;
+    border: 1px solid white;
+    box-sizing: border-box;
+    display: block;
+}
+.create button{
+    
+    width: 40%;
+    background-color: rgb(100, 19, 19);
+    color: white;
+    border-top: 7px;
+    padding: 8px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 8px;
 }
