--- a/src/components/admin.css
+++ b/src/components/admin.css
@@ -1,22 +1,12 @@
-.navbar {
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    max-width: 600px;
-    margin:  0 auto;
-    border-bottom: 1px solid white;
+.tit{
+    border-radius: 3px;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: silver;
+    font-size: 30px;
 }
-h1{
-    color: red;
-}
-.links {
-    margin-left: auto;
-}
-a{
-    margin-left: 16px;
-    text-decoration: none;
-    padding: 6px;
-}
-a:hover {
-    color: red;
+.nav-item:hover{
+    font-size: 1.2em;
+    
 }
