--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,73 @@
-.create {
-    max-width: 400px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px 10px;
-    border: 3px solid silver;
-    border-radius: 8px;
-    margin-top: 15px;
-}
-.create label{
-    text-align: center;
-    display: block;
-}
-.create input{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    width: 60%;
-}
-.create h2 {
-    font-size: 20px;
-    color: rgb(100, 19, 19);
-    margin-bottom: 30px;
+body {
+  margin: 0;
+  padding: 0;
+
+  background-size: cover;
+  font-family: sans-serif;
+  height: 100vh;
 }
 
-
-.create select {
-    width: 100%;
-    padding: 6px 10px;
-    margin: 10 px 0;
-    border: 1px solid white;
-    box-sizing: border-box;
-    display: block;
+.login-box {
+  width: 320px;
+  height: 420px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
 }
-.create button{
-    
-    width: 40%;
-    background-color: rgb(100, 19, 19);
-    color: white;
-    border-top: 7px;
-    padding: 8px;
-    border-radius: 8px;
-    cursor: pointer;
-    margin-top: 8px;
+.login-box h1 {
+  margin: 0;
+  padding: 0 0 20px;
+  text-align: center;
+  font-size: 22px;
+}
+
+.login-box label {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  display: block;
+}
+
+.login-box input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.login-box input[type="text"], .login-box input[type="password"] {
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  color: #fff;
+  font-size: 16px;
+}
+.login-box a {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 20px;
+  color: darkgrey;
+}
+
+.login-box a:hover {
+  color: #fff;
+}
+.login-box .boton {
+  margin-left: 92px;
+  padding: 4px;
+  height: 40px;
+  background: #b80f22;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 2px;
+}
+.login-box .boton:hover {
+  cursor: pointer;
+  background: #ffc107;
+  color: #000;
 }
